Does final tweaks to the theme for the attendee

--- a/attendees/templates/attendees/attendee.html
+++ b/attendees/templates/attendees/attendee.html
@@ -10,8 +10,8 @@
         {% endthumbnail %}
         <div class="name">{{ attendee.name }}</div>
         {% if attendee.affiliation %}<div class="affiliation">{{ attendee.affiliation }}</div>{% endif %}
-        {% if attendee.website %}<div class="website">☞{{ attendee.website|urlizetrunc:25 }}</div>{% endif %}
-        {% if attendee.twitter %}<div class="twitter">☎<a href="http://twitter.com/{{ attendee.twitter }}">{{attendee.twitter}}</a></div>{% endif %}
+        {% if attendee.website %}<div class="website">{{ attendee.website|urlizetrunc:25 }}</div>{% endif %}
+        {% if attendee.twitter %}<div class="twitter"><img src="{{MEDIA_URL}}images/twitter_bullet.png" alt="•" /> <a href="http://twitter.com/{{ attendee.twitter }}">{{attendee.twitter}}</a></div>{% endif %}
         <ul class="tags">
         {% for tag in attendee.tags.values|slice:":3" %}
         {% if tag.slug %}<li class="tag"><a href="{% url tag tagslug=tag.slug %}">{{ tag.name }}</a></li>{% endif %}
