--- a/attendees/media/css/style.css
+++ b/attendees/media/css/style.css
@@ -346,10 +346,12 @@ h2.dayname {
 /* steve changes
  */
 #mainmenu {
-    background-color: #fff;
+    background-color: #333;
     text-align: right;
     margin-left: auto; margin-right: auto;
     max-width: 800px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
 #mainmenu ul {
@@ -358,6 +360,31 @@ h2.dayname {
 #mainmenu li {
     display: inline-block;
     padding: 1em;
+}
+
+#header {
+    margin-left: 4em;
+    font-family: MuseoSans;
+    color: #fff;
+    font-weight: bold;
+    margin-bottom: 2em;
+}
+
+#header .section_title {
+    font-size: 2em;
+    font-family: MuseoSans;
+    font-weight: bold;
+    color: #bbb;
+}
+
+#header .section_date {
+    font-size: 1em;
+    color: #bbb;
+}
+
+#header h1 {
+    margin-top: 1ex;
+    font-size: 2em;
 }
 
 .letters {
@@ -399,7 +426,52 @@ h2.dayname {
 .attendee {
     display: inline-block;
     margin: 1em;
+    width: 180px;
+    min-height: 300px;
+    vertical-align: middle;
+    font-family: MuseoSans;
 }
+
+.attendee a {
+    text-decoration: none;
+}
+
+.attendee .photo {
+    border-radius: 5px;
+}
+
+.attendee .name {
+    color: #eee;
+    font-size: 1.5em;
+    margin-top: 0.5ex;
+}
+
+.attendee .affiliation {
+    color: #bbb;
+    font-size: 1.1em;
+}
+
+.attendee .tags {
+    display: block;
+    list-style: none;
+    margin: 0; padding: 0;
+    margin-top: 0.5em;
+}
+
+.attendee .tags .tag {
+    display: inline;
+    line-height: 2em;
+    padding: 3px;
+    background-color: #aaa;
+    color: #000;
+    border-radius: 2px;
+    white-space: nowrap;
+}
+
+.attendee .tag a {
+    color: #000;
+}
+
 /* end steve changes */
 #details nav ul {
   padding-right: 1em;
